Made solution much faster

--- a/nmbr14.ipynb
+++ b/nmbr14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,34 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class State:\n",
     "    target = 0\n",
     "    numbers = [0,0,0,0,0,0]\n",
-    "    operation_count = 0\n",
+    "    operations = []\n",
     "\n",
-    "    def save_solution(self, f, s):\n",
+    "    def save_solution(self):\n",
     "        global solutions\n",
-    "        r = []\n",
-    "        r = r + [f.numbers]\n",
-    "        r = r + [s.numbers]\n",
-    "        p = prevs[s]\n",
-    "        while p:\n",
-    "            r = r + [p.numbers]\n",
-    "            if p in prevs:\n",
-    "                p = prevs[p]\n",
-    "            else:\n",
-    "                p = None\n",
-    "        solutions = solutions + [r]\n",
+    "        solutions = solutions + [self.operations]\n",
     "\n",
-    "    def __init__(self, vals, target, operation_count):\n",
+    "    def __init__(self, vals, target, operations):\n",
     "        self.numbers = vals\n",
     "        self.numbers.sort()\n",
     "        self.target = target\n",
-    "        self.operation_count = operation_count\n",
+    "        self.operations = operations\n",
     "\n",
     "    def next_states(self):\n",
     "        result = set({})\n",
@@ -74,52 +64,51 @@
     "            nums.remove(opt[0])\n",
     "            nums.remove(opt[1])\n",
     "\n",
-    "            s1 = State(nums + [int(opt[0]+opt[1])], self.target, self.operation_count + 1)\n",
-    "            s2 = State(nums + [int(opt[0]-opt[1])], self.target, self.operation_count + 1)\n",
-    "            s3 = State(nums + [int(opt[0]*opt[1])], self.target, self.operation_count + 1)\n",
+    "            s1 = State(nums + [int(opt[0]+opt[1])], self.target, self.operations + [str(opt[0])+'+'+str(opt[1])])\n",
+    "            if opt[0] - opt[1] > 0:\n",
+    "                s2 = State(nums + [int(opt[0]-opt[1])], self.target, self.operations + [str(opt[0])+'-'+str(opt[1])])\n",
+    "            else:\n",
+    "                s2 = None\n",
+    "            s3 = State(nums + [int(opt[0]*opt[1])], self.target, self.operations + [str(opt[0])+'*'+str(opt[1])])\n",
     "            if opt[1] != 0 and opt[0]%opt[1] == 0:\n",
-    "                s4 = State(nums + [int(opt[0]/opt[1])], self.target, self.operation_count + 1)\n",
+    "                s4 = State(nums + [int(opt[0]/opt[1])], self.target, self.operations + [str(opt[0])+'/'+str(opt[1])])\n",
     "            else:\n",
     "                s4 = None\n",
     "            \n",
-    "            if len(s1.numbers)==1:\n",
-    "                if s1.numbers[0] == self.target:\n",
-    "                    self.save_solution(s1,self)\n",
-    "            else:\n",
+    "            if self.target in s1.numbers:\n",
+    "                s1.save_solution()\n",
+    "            elif len(s1.numbers)>1:\n",
     "                result = result.union(set({s1}))\n",
     "\n",
-    "            if len(s2.numbers)==1:\n",
-    "                if s2.numbers[0] == self.target:\n",
-    "                    self.save_solution(s2,self)\n",
-    "            else:\n",
-    "                result = result.union(set({s2}))\n",
+    "            if s2:\n",
+    "                if self.target in s2.numbers:\n",
+    "                    s2.save_solution()\n",
+    "                elif len(s2.numbers)>1:\n",
+    "                    result = result.union(set({s2}))\n",
     "\n",
-    "            if len(s3.numbers)==1:\n",
-    "                if s3.numbers[0] == self.target:\n",
-    "                    self.save_solution(s3,self)\n",
-    "            else:\n",
+    "            if self.target in s3.numbers:\n",
+    "                s3.save_solution()\n",
+    "            elif len(s3.numbers)>1:\n",
     "                result = result.union(set({s3}))\n",
     "\n",
     "            if s4:\n",
-    "                if len(s4.numbers)==1:\n",
-    "                    if s4.numbers[0] == self.target:\n",
-    "                        self.save_solution(s4,self)\n",
-    "                else:\n",
+    "                if self.target in s4.numbers:\n",
+    "                    s4.save_solution()\n",
+    "                elif len(s4.numbers)>1:\n",
     "                    result = result.union(set({s4}))\n",
     "\n",
     "        for r in result:\n",
     "            prevs[r] = self\n",
-    "        return result\n",
-    "\n"
+    "        return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = State([1,5,6,2,50,25], 813, 0)\n",
+    "start = State([1,5,6,2,50,25], 813, [])\n",
     "\n",
     "all_states = set({start})\n",
     "\n",
@@ -139,39 +128,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 [[813], [51, 762], [6, 51, 127], [2, 6, 51, 125], [2, 5, 6, 25, 51], [1, 2, 5, 6, 25, 50]]\n",
-      "5 [[813], [51, 762], [6, 51, 127], [2, 6, 51, 125], [1, 2, 6, 50, 125], [1, 2, 5, 6, 25, 50]]\n",
-      "5 [[813], [1, 812], [1, 50, 762], [1, 6, 50, 127], [1, 2, 6, 50, 125], [1, 2, 5, 6, 25, 50]]\n",
-      "5 [[813], [50, 763], [1, 50, 762], [1, 6, 50, 127], [1, 2, 6, 50, 125], [1, 2, 5, 6, 25, 50]]\n",
-      "5 [[813], [51, 762], [1, 50, 762], [1, 6, 50, 127], [1, 2, 6, 50, 125], [1, 2, 5, 6, 25, 50]]\n",
-      "5 [[813], [51, 762], [6, 51, 127], [1, 6, 50, 127], [1, 2, 6, 50, 125], [1, 2, 5, 6, 25, 50]]\n"
+      "5 813 ['1+50', '5*25', '2+125', '6*127', '51+762']\n",
+      "5 813 ['5*25', '2+125', '6*127', '50+762', '1+812']\n",
+      "5 813 ['5*25', '2+125', '6*127', '1+762', '50+763']\n",
+      "5 813 ['5*25', '2+125', '6*127', '1+50', '51+762']\n",
+      "5 813 ['5*25', '1+50', '2+125', '6*127', '51+762']\n",
+      "5 813 ['5*25', '2+125', '1+50', '6*127', '51+762']\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "for s in solutions:\n",
-    "    print(len(s)-1, s)\n"
+    "    print(len(s), start.target, s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "66357a483d5d827c1181db2241c481b47937c53011c179208f075155bcb2a77a"
+   "hash": "98fb52d79eaafd5623d4d36a2158b0828666e35d5cf6898ad5c071afb6c45700"
   },
   "kernelspec": {
    "display_name": "Python 3.8.13 ('number14')",
