Updated the notebook to reflect the solution with the dynamic programming

--- a/nmbr14.ipynb
+++ b/nmbr14.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import deque\n",
     "from copy import deepcopy\n",
-    "from itertools import combinations "
+    "from itertools import combinations\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -20,12 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "prevs = {}\n",
-    "solutions = []"
+    "solutions = []\n",
+    "DP = {}"
    ]
   },
   {
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,8 @@
     "\n",
     "    def save_solution(self):\n",
     "        global solutions\n",
-    "        solutions = solutions + [self.operations]\n",
+    "        if self.operations not in solutions:\n",
+    "            solutions = solutions + [self.operations]\n",
     "\n",
     "    def __init__(self, vals, target, operations):\n",
     "        self.numbers = vals\n",
@@ -56,97 +59,131 @@
     "        self.target = target\n",
     "        self.operations = operations\n",
     "\n",
+    "    def solve(self):\n",
+    "        global DP\n",
+    "        if str(self.operations) in DP:\n",
+    "            return\n",
+    "        ls, ns = self.next_states()\n",
+    "        if len(ls) > 0:\n",
+    "            for s in ls:\n",
+    "                s.save_solution()\n",
+    "            DP[str(self.operations)] = ls\n",
+    "        else:\n",
+    "            for s in ns:\n",
+    "                s.solve()\n",
+    "\n",
     "    def next_states(self):\n",
     "        result = set({})\n",
+    "        local_solutions = set({})\n",
     "        options = combinations(self.numbers, 2)\n",
     "        for opt in options:\n",
     "            nums = deepcopy(self.numbers)\n",
     "            nums.remove(opt[0])\n",
     "            nums.remove(opt[1])\n",
     "\n",
-    "            s1 = State(nums + [int(opt[0]+opt[1])], self.target, self.operations + [str(opt[0])+'+'+str(opt[1])])\n",
-    "            if opt[0] - opt[1] > 0:\n",
-    "                s2 = State(nums + [int(opt[0]-opt[1])], self.target, self.operations + [str(opt[0])+'-'+str(opt[1])])\n",
+    "            opt0 = max(opt[0], opt[1])\n",
+    "            opt1 = min(opt[0], opt[1])\n",
+    "\n",
+    "            s1 = State(nums + [int(opt0+opt1)], self.target, self.operations + [str(opt0)+'+'+str(opt1)])\n",
+    "            if opt0 != opt1:\n",
+    "                s2 = State(nums + [int(opt0-opt1)], self.target, self.operations + [str(opt0)+'-'+str(opt1)])\n",
     "            else:\n",
     "                s2 = None\n",
-    "            s3 = State(nums + [int(opt[0]*opt[1])], self.target, self.operations + [str(opt[0])+'*'+str(opt[1])])\n",
-    "            if opt[1] != 0 and opt[0]%opt[1] == 0:\n",
-    "                s4 = State(nums + [int(opt[0]/opt[1])], self.target, self.operations + [str(opt[0])+'/'+str(opt[1])])\n",
+    "            s3 = State(nums + [int(opt0*opt1)], self.target, self.operations + [str(opt0)+'*'+str(opt1)])\n",
+    "            if opt1 != 0 and opt0%opt1 == 0:\n",
+    "                s4 = State(nums + [int(opt0/opt1)], self.target, self.operations + [str(opt0)+'/'+str(opt1)])\n",
     "            else:\n",
     "                s4 = None\n",
     "            \n",
     "            if self.target in s1.numbers:\n",
-    "                s1.save_solution()\n",
+    "                local_solutions = local_solutions.union(set({s1}))\n",
     "            elif len(s1.numbers)>1:\n",
     "                result = result.union(set({s1}))\n",
     "\n",
     "            if s2:\n",
     "                if self.target in s2.numbers:\n",
-    "                    s2.save_solution()\n",
+    "                    local_solutions = local_solutions.union(set({s2}))\n",
     "                elif len(s2.numbers)>1:\n",
     "                    result = result.union(set({s2}))\n",
     "\n",
     "            if self.target in s3.numbers:\n",
-    "                s3.save_solution()\n",
+    "                local_solutions = local_solutions.union(set({s3}))\n",
     "            elif len(s3.numbers)>1:\n",
     "                result = result.union(set({s3}))\n",
     "\n",
     "            if s4:\n",
     "                if self.target in s4.numbers:\n",
-    "                    s4.save_solution()\n",
+    "                    local_solutions = local_solutions.union(set({s4}))\n",
     "                elif len(s4.numbers)>1:\n",
     "                    result = result.union(set({s4}))\n",
     "\n",
     "        for r in result:\n",
     "            prevs[r] = self\n",
-    "        return result"
+    "        return local_solutions, result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = State([1,5,6,2,50,25], 813, [])\n",
+    "start = State([6,6,2,8,50,75], 901, [])\n",
     "\n",
-    "all_states = set({start})\n",
-    "\n",
-    "while len(all_states) > 0:\n",
-    "    c_s = list(all_states).pop()\n",
-    "    all_states.remove(c_s)\n",
-    "    next = c_s.next_states()\n",
-    "    all_states = all_states.union(set(next))\n"
+    "start.solve()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print the solutions"
+    "Print and count the solutions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 813 ['1+50', '5*25', '2+125', '6*127', '51+762']\n",
-      "5 813 ['5*25', '2+125', '6*127', '50+762', '1+812']\n",
-      "5 813 ['5*25', '2+125', '6*127', '1+762', '50+763']\n",
-      "5 813 ['5*25', '2+125', '6*127', '1+50', '51+762']\n",
-      "5 813 ['5*25', '1+50', '2+125', '6*127', '51+762']\n",
-      "5 813 ['5*25', '2+125', '1+50', '6*127', '51+762']\n"
+      "5 901 ['6*2', '12*6', '72+50', '122*8', '976-75']\n",
+      "5 901 ['6*6', '36*2', '72+50', '122*8', '976-75']\n"
      ]
     }
    ],
    "source": [
-    "for s in solutions:\n",
-    "    print(len(s), start.target, s)"
+    "counts = defaultdict(int)\n",
+    "for sol in solutions:\n",
+    "    counts[len(sol)] = counts[len(sol)] + 1\n",
+    "    print(len(sol), start.target, sol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the number of solutions per solution length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in counts.items():\n",
+    "    print(k,v)"
    ]
   }
  ],
